--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,12 +1,14 @@
-/* Для оформлення хедера клас, який по суті розширює оформлення яке завдано у .container. Задан тип вирівнювання, за якого один елемент контейнеру притиснеться до лівої його межї, а другий - до правої. Елементів в контейнері - два (це дочірні елементі, тобто перші по рівню вкладенності): nav та address. Саме вони й вирівнюються. Добре видно коли задати вирівнювання з початку основної осі та додати gap. Все стиснеться ліворуч та з'явиться проміжок між вмістом тегів nav та address */
+@media screen and (max-width: 767px) {
+  .menu-list {
+    display: none;
+  }
+}
 
 /* .page-header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 } */
-
-/* Header. Вибір шріфта, його ваги, розміру, коліру та ефекти hover/focus для посилання WebStudio. Зміна кольору слова Web. Задання вертикального розміру, так як задаються внутрішні вертикальні відступи. Рамка товщіною 1 піксел та нижній зовнішній відступ */
 
 /* .page-header {
   border-bottom: 1px solid #e7e9fc;
@@ -34,12 +36,10 @@
   color: var(--ocean);
 } */
 
-/* Прибирання курсиву, так як тег address за замовчанням має font-style: italic */
-
 /* .head-address {
   font-style: normal;
 } */
-/* Зміни навігаційних посилань: колір, вага. Додавання ефектів hover/focus. Контейнер menu типу flex створено, щоб блокові елементи, що вкладені у тег nav (посилання та список), не були один під одним. В цьому контейнері два flex елемента (a та ul). Це значить, що всі властивості з класу menu будуть діяті ліше на них */
+
 /* 
 .menu {
   display: flex;
@@ -47,7 +47,6 @@
   align-items: center;
 } */
 
-/* Клас  menu-list (flex-контейнер) потрібен, щоб рядки списку не стояли один пид одним. В цьому контейнері три flex-елемента - рядки списку = > всі властивості контейнера розповсюджуються на ці три елемента */
 /* 
 .menu-list {
   display: flex;
@@ -86,8 +85,6 @@
   border-radius: 2px;
   background-color: var(--ocean);
 } */
-
-/* Зміни контактних посилань: колір. Додавання ефектів hover/focus. Вага за замовчанням правильна. Використання flex-контейнера для розміщення елементів списку в один рядок */
 
 /* .contact-list {
   display: flex;
