--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,10 +1,37 @@
-/* Загальний контейнер, який буде застосовуватісь у всіх секціях. Йому завдані: фіксована шіріна, автовирівнювання всього контейнера по цетру сторінки та внутрішні відступи справа та зліва */
-
 .container {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+    padding: 15px;
+  }
+}
+
+/* .container {
   display: flex;
   width: 1158px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-}
+} */
