--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -21,6 +21,8 @@
 
   --green: #31d0aa; /* hover-social-link-icon-color in footer*/
 
+  --common-black: #2f2f37;
+
   --body-font-family: 'Roboto', sans-serif;
   --logo-font-family: 'Raleway', sans-serif;
 }
