--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -12,7 +12,7 @@
   color: var(--iris);
   line-height: 1.17;
   letter-spacing: 0.03em;
-  margin-right: 76px;
+  /* margin-right: 76px; */
 }
 
 .logo-head {
@@ -33,7 +33,7 @@
     border: 1px dashed tomato;
     background-color: transparent;
   }
-  .head-address {
+  .contact-list {
     display: none;
   }
 }
