--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,8 +1,5 @@
 .container {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 16px;
 }
 
 @media screen and (min-width: 320px) {
