--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,5 +1,6 @@
 .container {
-  padding: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 @media screen and (min-width: 320px) {
@@ -12,8 +13,6 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
