--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -45,6 +45,53 @@
     0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
+@media screen and (min-width: 768px) {
+  .mobile-menu-btn {
+    display: none;
+  }
+  .head-address {
+    display: block;
+  }
+
+  .menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .menu-list {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+  }
+
+  .head-logo {
+    margin-right: 120px;
+  }
+
+  .menu-list-link {
+    display: block;
+    font-weight: 500;
+    color: var(--navy-blue);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
+  .contact-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .contact-list-link {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--slate);
+  }
+}
+
 /* .page-header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -73,13 +120,6 @@
 
 /* .head-address {
   font-style: normal;
-} */
-
-/* 
-.menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 } */
 
 /* 
@@ -121,10 +161,7 @@
   background-color: var(--ocean);
 } */
 
-/* .contact-list {
-  display: flex;
-  gap: 40px;
-}
+/* 
 
 .contact-list-link {
   display: block;
