--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -46,6 +46,10 @@
 }
 
 @media screen and (min-width: 768px) {
+  .page-header {
+    padding: 0;
+  }
+
   .mobile-menu-btn {
     display: none;
   }
@@ -75,6 +79,30 @@
     color: var(--navy-blue);
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 24px 0;
+  }
+
+  .menu-list-link:hover,
+  .menu-list-link:focus {
+    color: var(--ocean);
+  }
+
+  .menu-list-item:nth-child(1) .menu-list-link {
+    position: relative;
+    color: var(--ocean);
+  }
+
+  .menu-list-item:nth-child(1) .menu-list-link::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--ocean);
   }
 
   .contact-list {
@@ -89,6 +117,10 @@
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--slate);
+  }
+
+  .head-address {
+    font-style: normal;
   }
 }
 
@@ -116,10 +148,6 @@
 .head-logo:hover,
 .head-logo:focus {
   color: var(--ocean);
-} */
-
-/* .head-address {
-  font-style: normal;
 } */
 
 /* 
