--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -71,6 +71,12 @@
 
   .head-logo {
     margin-right: 120px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .head-logo:hover,
+  .head-logo:focus {
+    color: var(--ocean);
   }
 
   .menu-list-link {
@@ -117,10 +123,45 @@
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--slate);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
+  .contact-list-link:hover,
+  .contact-list-link:focus {
+    color: var(--ocean);
+  }
   .head-address {
     font-style: normal;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .page-header {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+
+  .head-logo {
+    margin-right: 76px;
+  }
+
+  .contact-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .contact-list-link {
+    display: block;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--slate);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .contact-list-link:hover,
+  .contact-list-link:focus {
+    color: var(--ocean);
   }
 }
 
