--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -1,6 +1,60 @@
-/* Кнопка. Зміна розміру шрифта, його ваги, кольору. Зміна фонового кольору. Задання розміру кнопки та ефектів hover/focus */
-
 .hero {
+  background-color: var(--navy-blue);
+  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/background/office-mobile.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  padding-top: 72px;
+  padding-bottom: 72px;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* .hero-align {
+  flex-direction: column;
+} */
+
+.hero-title {
+  color: var(--white);
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 66px;
+  padding-right: 66px;
+  max-width: 288px;
+}
+
+.hero-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--white);
+  background-color: var(--iris);
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--ocean);
+}
+
+/* .hero {
   background-color: var(--navy-blue);
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/background/office.jpg);
@@ -46,10 +100,10 @@
   min-width: 169px;
   height: 56px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer; /* Додавання курсора */
+  cursor: pointer; 
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--ocean);
-}
+} */
