--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -1,7 +1,7 @@
 .hero {
   background-color: var(--navy-blue);
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/background/office-mobile.jpg);
+    url(/images/background/office-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -54,6 +54,14 @@
   background-color: var(--ocean);
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 320px) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(/images/background/office-mobile@2x.jpg);
+  }
+}
 /* .hero {
   background-color: var(--navy-blue);
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
