--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -12,9 +12,9 @@
   margin-left: auto;
   margin-right: auto;
 }
-/* .hero-align {
+.hero-align {
   flex-direction: column;
-} */
+}
 
 .hero-title {
   color: var(--white);
@@ -60,6 +60,37 @@
   .hero {
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(/images/background/office-mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(/images/background/office-tablet.jpg);
+    max-width: 768px;
+    padding-top: 112px;
+    padding-bottom: 112px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .hero-title {
+    color: var(--white);
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 496px;
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(/images/background/office-tablet@2x.jpg);
   }
 }
 /* .hero {
