--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -12,9 +12,9 @@
   margin-left: auto;
   margin-right: auto;
 }
-.hero-align {
+/* .hero-align {
   flex-direction: column;
-}
+} */
 
 .hero-title {
   color: var(--white);
@@ -24,8 +24,8 @@
   margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 66px;
-  padding-right: 66px;
+  /* padding-left: 66px;
+  padding-right: 66px; */
   max-width: 288px;
 }
 
@@ -78,9 +78,9 @@
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    margin-bottom: 48px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 36px;
+    /* margin-left: auto;
+    margin-right: auto; */
     max-width: 496px;
   }
 }
@@ -93,6 +93,7 @@
       url(/images/background/office-tablet@2x.jpg);
   }
 }
+
 /* .hero {
   background-color: var(--navy-blue);
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
