--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -8,12 +8,15 @@
   text-align: center;
   padding-top: 72px;
   padding-bottom: 72px;
+
   max-width: 320px;
   margin-left: auto;
   margin-right: auto;
 }
 /* .hero-align {
   flex-direction: column;
+  padding-left: 16px;
+  padding-right: 16px;
 } */
 
 .hero-title {
@@ -24,9 +27,7 @@
   margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
-  /* padding-left: 66px;
-  padding-right: 66px; */
-  max-width: 288px;
+  max-width: 156px;
 }
 
 .hero-button {
