--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -80,8 +80,6 @@
     line-height: 1.07;
     letter-spacing: 0.02em;
     margin-bottom: 36px;
-    /* margin-left: auto;
-    margin-right: auto; */
     max-width: 496px;
   }
 }
@@ -92,6 +90,26 @@
   .hero {
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(/images/background/office-tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(/images/background/office.jpg);
+    max-width: 1440px;
+    padding-top: 112px;
+    padding-bottom: 112px;
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+}
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
+  screen and (min-resolution: 2dppx) and (min-width: 1158px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(/images/background/office@2x.jpg);
   }
 }
 
