--- a/css/layout/benefits.css
+++ b/css/layout/benefits.css
@@ -21,6 +21,56 @@
   color: var(--navy-blue);
   text-align: center;
 }
+
+.benefits-list-text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .benefits-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+  .benefits-list-item {
+    width: calc((100% - 24px) / 2);
+    padding-bottom: 0;
+  }
+  .benefits-list-title {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .benefits-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    margin-bottom: 8px;
+    background-color: var(--cloud);
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    padding: 24px 100px;
+  }
+  .benefits-list-item {
+    width: calc((100% - 72px) / 4);
+    padding-bottom: 72px;
+  }
+  .benefits-list-title {
+    text-align: left;
+  }
+  .benefits-list-title {
+    font-size: 20px;
+  }
+  .benefits-list-text {
+    font-weight: 400;
+  }
+}
 /* .benefits {
   padding-top: 120px;
   padding-bottom: 120px;
