--- a/css/layout/team.css
+++ b/css/layout/team.css
@@ -1,4 +1,100 @@
 .team {
+  padding-top: 96px;
+  padding-bottom: 96px;
+  padding-left: 12px;
+  padding-right: 12px;
+  background-color: var(--cloud);
+}
+.team-align {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.team-title {
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--navy-blue);
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px;
+}
+
+.team-member {
+  width: 264px;
+  background-color: var(--white);
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.cart-description {
+  margin: 32px 16px;
+}
+.team-members-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--team-portfolio-text-color);
+  margin-bottom: 8px;
+  text-align: center;
+}
+
+.team-member-text {
+  text-align: center;
+  margin-bottom: 8px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.team-social {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.team-svg {
+  fill: var(--cloud);
+}
+
+.team-social-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--iris);
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  flex-shrink: 0;
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: var(--ocean);
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 64px;
+    column-gap: 24px;
+  }
+}
+
+/* .team {
   padding-top: 120px;
   padding-bottom: 120px;
   background-color: var(--cloud);
@@ -22,7 +118,7 @@
   gap: 24px;
 }
 
-/* Ширину для класу team-member додав виключно для естетики. !!!НЕ ЗАБУТИ ВІДРЕДАГУВАТИ!!!*/
+
 
 .team-member {
   width: calc((100% - 72px) / 4);
@@ -31,7 +127,7 @@
   border-bottom-left-radius: 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-  /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08); */
+  
 }
 
 .cart-description {
@@ -80,4 +176,4 @@
 .team-social-link:hover,
 .team-social-link:focus {
   background-color: var(--ocean);
-}
+} */
