--- a/css/layout/team.css
+++ b/css/layout/team.css
@@ -91,12 +91,19 @@
     row-gap: 64px;
     column-gap: 24px;
   }
+  .team-member {
+    width: calc((100% - 240px) / 2);
+  }
 }
 
 @media screen and (min-width: 1158px) {
   .team-list {
     gap: 24px;
   }
+  .team-member {
+    width: calc((100% - 72px) / 4);
+  }
+}
 
 /* .team {
   padding-top: 120px;
