--- a/css/layout/portfolio.css
+++ b/css/layout/portfolio.css
@@ -1,4 +1,4 @@
-.portfolio {
+/* .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -77,4 +77,4 @@
 .portfolio-list-item:hover {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
+} */
