--- a/css/layout/portfolio.css
+++ b/css/layout/portfolio.css
@@ -67,6 +67,44 @@
   }
 }
 
+@media screen and (min-width: 1158px) {
+  .portfolio-list {
+    row-gap: 48px;
+  }
+  .portfolio-list-item {
+    width: calc((100% - 48px) / 4);
+  }
+
+  .overlay-box {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .overlay {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 40px 32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transform: translatey(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: var(--iris);
+    color: var(--cloud);
+  }
+
+  .portfolio-list-item:hover .overlay {
+    transform: translatey(0);
+  }
+
+  .portfolio-list-item:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
+}
+
 /* .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
