--- a/css/layout/portfolio.css
+++ b/css/layout/portfolio.css
@@ -72,7 +72,7 @@
     row-gap: 48px;
   }
   .portfolio-list-item {
-    width: calc((100% - 48px) / 4);
+    width: calc((100% - 48px) / 3);
   }
 
   .overlay-box {
@@ -102,6 +102,10 @@
   .portfolio-list-item:hover {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
       0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
+  .portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 }
 
