--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -3,18 +3,10 @@
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.main-footer-conteiner {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
 
 .page-footer-container {
   display: inline-block;
-  margin-right: 120px;
-  /* flex-direction: column;
-  align-items: flex-start;
-  row-gap: 16px; */
+  text-align: center;
 }
 
 .foot-logo {
@@ -29,10 +21,150 @@
   margin-bottom: 16px;
 }
 
-/* .foot-logo:hover,
-.foot-logo:focus {
-  color: var(--ocean);
-} */
+.logo-part {
+  color: var(--cloud);
+}
+
+.foot-text {
+  max-width: 288px;
+  text-align: left;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  line-height: 1.5;
+  margin-bottom: 72px;
+}
+.footer-text-social {
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: var(--white);
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-bottom: 72px;
+}
+
+.footer-social-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-list-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+
+  border-radius: 50%;
+  background-color: var(--iris);
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  flex-shrink: 0;
+}
+
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+  background-color: var(--green);
+}
+
+.footer-svg {
+  fill: var(--cloud);
+}
+
+.user-email {
+  width: 288px;
+  height: 40px;
+  padding: 8px 16px;
+  border: 1px solid var(--white);
+  outline: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+  color: var(--white);
+  border-radius: 4px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.user-email::placeholder {
+  color: var(--white);
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.footer-email-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 165px;
+  height: 40px;
+  padding: 8px 24px;
+  border: none;
+  background-color: var(--iris);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white);
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-btn-icon {
+  margin-left: 16px;
+  fill: var(--white);
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: var(--ocean);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+/* .page-footer {
+  background-color: var(--navy-blue);
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.main-footer-conteiner {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.page-footer-container {
+  display: inline-block;
+  margin-right: 120px;
+
+}
+
+.foot-logo {
+  display: inline-block;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  font-size: 18px;
+  color: var(--iris);
+  margin-bottom: 16px;
+}
+
+
 
 .logo-part {
   color: var(--cloud);
@@ -67,15 +199,14 @@
   display: flex;
   width: 100%;
   height: 100%;
-  /* width: 40px;
-  height: 40px; */
+ 
   border-radius: 50%;
   background-color: var(--iris);
   justify-content: center;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   flex-shrink: 0;
-  /* transform: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+ 
 }
 
 .footer-social-list-link:hover,
@@ -103,8 +234,7 @@
   background-color: transparent;
   color: var(--white);
   border-radius: 4px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); /* Підсвітка поля вводу */
-  /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); */
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); 
 }
 
 .user-email::placeholder {
@@ -113,6 +243,8 @@
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
+
+
 
 .footer-email-container {
   display: flex;
@@ -148,4 +280,4 @@
 .submit-btn:focus {
   background-color: var(--ocean);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-}
+} */
