--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -2,11 +2,11 @@
   background-color: var(--navy-blue);
   padding-top: 100px;
   padding-bottom: 100px;
+  max-width: 1440px;
 }
 
 .page-footer-container {
   display: inline-block;
-  text-align: center;
 }
 
 .foot-logo {
@@ -34,7 +34,6 @@
   margin-bottom: 72px;
 }
 .footer-text-social {
-  text-align: center;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -135,6 +134,39 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
+@media screen and (min-width: 768px) {
+  .main-footer-conteiner {
+    display: flex;
+    /* justify-content: center; */
+    align-items: baseline;
+    column-gap: 24px;
+    flex-wrap: wrap;
+  }
+  .footer-social-list {
+    margin-bottom: 72px;
+  }
+  .footer-email-container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .page-footer-container {
+    display: inline-block;
+    margin-right: 120px;
+  }
+  .foot-text {
+    max-width: 264px;
+  }
+  .user-email {
+    width: 264px;
+  }
+  .footter-email-main-container {
+    margin-left: 80px;
+  }
+}
 /* .page-footer {
   background-color: var(--navy-blue);
   padding-top: 100px;
