--- a/css/base/mobilemodal.css
+++ b/css/base/mobilemodal.css
@@ -1,5 +1,8 @@
 .modal-mobile-menu {
   position: fixed;
+  padding-left: 16px;
+  padding-right: 16px;
+
   top: 0;
   left: 0;
   z-index: 99999999;
@@ -7,10 +10,103 @@
   height: 100%;
   background-color: var(--white);
   transform: translateX(-100%);
-  padding-left: 16px;
-  padding-right: 16px;
+
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-open {
   transform: translateX(0);
+}
+.modal-mobile-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 72px;
+  padding-bottom: 40px;
+}
+.mobile-menu-menu-close-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  line-height: 0;
+  background-color: var(--cornflower);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-menu-close-button:hover,
+.mobile-menu-menu-close-button:focus {
+  background-color: var(--ocean);
+  fill: var(--white);
+}
+
+.navigation-mobile-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  /* margin-top: 72px; */
+}
+
+.navigation-mobile-link {
+  display: block;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+}
+
+.navigation-mobile-link:hover,
+.navigation-mobile-link:focus {
+  color: var(--ocean);
+}
+
+.mobile-address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 168px;
+}
+.mobile-address-link {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+}
+
+.mobile-address-link:hover,
+.mobile-address-link:focus {
+  color: var(--ocean);
+}
+.mobile-social-list {
+  display: flex;
+  gap: 40px;
+  margin-top: 48px;
+  /* margin-bottom: 40px; */
+}
+.mobile-social-list-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  line-height: 0;
+  border: none;
+  border-radius: 50%;
+  padding: 0;
+  background-color: var(--iris);
+}
+
+.mobile-social-svg {
+  fill: var(--cloud);
+}
+
+.mobile-social-list-link:hover,
+.mobile-social-list-link:focus {
+  background-color: var(--ocean);
 }
