--- a/css/base/mobilemodal.css
+++ b/css/base/mobilemodal.css
@@ -33,8 +33,9 @@
   border: none;
   padding: 0;
   line-height: 0;
-  background-color: var(--cornflower);
+  background-color: transparent;
   border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -53,8 +54,8 @@
 }
 
 .navigation-mobile-link {
-  display: block;
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.1;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
@@ -68,8 +69,8 @@
 .mobile-address-list {
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  margin-top: 168px;
+  gap: 24px;
+  /* margin-top: 168px; */
 }
 .mobile-address-link {
   font-size: 20px;
