--- a/css/base/mobilemodal.css
+++ b/css/base/mobilemodal.css
@@ -2,7 +2,6 @@
   position: fixed;
   padding-left: 16px;
   padding-right: 16px;
-
   top: 0;
   left: 0;
   z-index: 99999999;
@@ -10,10 +9,9 @@
   height: 100%;
   background-color: var(--white);
   transform: translateX(-100%);
-
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.is-open {
+.modal-mobile-menu.is-open {
   transform: translateX(0);
 }
 .modal-mobile-menu {
@@ -50,7 +48,6 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  /* margin-top: 72px; */
 }
 
 .navigation-mobile-link {
@@ -70,7 +67,6 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  /* margin-top: 168px; */
 }
 .mobile-address-link {
   font-size: 20px;
@@ -88,7 +84,6 @@
   display: flex;
   gap: 40px;
   margin-top: 48px;
-  /* margin-bottom: 40px; */
 }
 .mobile-social-list-link {
   display: flex;
@@ -96,10 +91,7 @@
   height: 40px;
   justify-content: center;
   align-items: center;
-  line-height: 0;
-  border: none;
   border-radius: 50%;
-  padding: 0;
   background-color: var(--iris);
 }
 
