--- a/css/base/mobilemodal.css
+++ b/css/base/mobilemodal.css
@@ -27,21 +27,21 @@
   right: 24px;
   width: 24px;
   height: 24px;
-  cursor: pointer;
-  border: none;
   padding: 0;
   line-height: 0;
   background-color: transparent;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  fill: var(--navy-blue);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu-menu-close-button:hover,
 .mobile-menu-menu-close-button:focus {
   background-color: var(--ocean);
   fill: var(--white);
+  border: none;
 }
 
 .navigation-mobile-list {
