--- a/css/base/modal.css
+++ b/css/base/modal.css
@@ -6,7 +6,6 @@
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   z-index: 999999;
-
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -25,12 +24,12 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   background-color: var(--dairy);
   border-radius: 4px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 16px;
+  padding-right: 16px;
   padding-top: 72px;
   padding-bottom: 24px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -38,9 +37,6 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   padding: 0;
   width: 24px;
@@ -48,18 +44,18 @@
   top: 24px;
   right: 24px;
   line-height: 0;
-  border: 0;
   border-radius: 50%;
   background-color: var(--cornflower);
+  fill: var(--navy-blue);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.close-button-icon {
-  fill: var(--navy-blue);
+/* .close-button-icon {
+  
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .close-button:hover,
 .close-button:focus {
@@ -201,7 +197,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  /* margin-top: 24px; */
+
   font-weight: 500;
   font-size: 16px;
   color: var(--white);
