--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -10,6 +10,7 @@
 
 .foot-logo {
   display: inline-block;
+  text-align: center;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -18,6 +19,8 @@
   font-size: 18px;
   color: var(--iris);
   margin-bottom: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo-part {
@@ -138,7 +141,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .main-footer-conteiner {
+  .main-footer-container {
     display: flex;
     /* justify-content: center; */
     align-items: baseline;
@@ -149,7 +152,6 @@
   .footer-email-container {
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
     gap: 24px;
   }
 }
