--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -8,8 +8,8 @@
   text-align: center;
   padding-top: 72px;
   padding-bottom: 72px;
-
-  max-width: 320px;
+  width: 100%;
+  /* max-width: 320px; */
   margin-left: auto;
   margin-right: auto;
 }
@@ -63,7 +63,7 @@
   .hero {
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../../images/background/office-tablet.jpg);
-    max-width: 768px;
+    /* max-width: 768px; */
     padding-top: 112px;
     padding-bottom: 112px;
     margin-left: auto;
@@ -91,7 +91,7 @@
   .hero {
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../../images/background/office.jpg);
-    max-width: 1440px;
+    /* max-width: 1440px; */
     padding-top: 188px;
     padding-bottom: 188px;
   }
