--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -175,6 +175,10 @@
   }
 }
 @media screen and (min-width: 1158px) {
+  .main-footer-container {
+    padding-left: 16px;
+  }
+
   .page-footer {
     max-width: 1440px;
   }
