--- a/css/base/mobilemodal.css
+++ b/css/base/mobilemodal.css
@@ -1,7 +1,5 @@
 .modal-mobile-menu {
   position: fixed;
-  padding-left: 16px;
-  padding-right: 16px;
   top: 0;
   left: 0;
   z-index: 99999999;
@@ -10,16 +8,13 @@
   background-color: var(--white);
   transform: translateX(-100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-mobile-menu.is-open {
-  transform: translateX(0);
-}
-.modal-mobile-menu {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-top: 72px;
-  padding-bottom: 40px;
+  padding: 72px 16px 40px;
+}
+.modal-mobile-menu.is-open {
+  transform: translateX(0);
 }
 .mobile-menu-menu-close-button {
   position: absolute;
