--- a/css/base/modal.css
+++ b/css/base/modal.css
@@ -230,3 +230,15 @@
     padding-right: 24px;
   }
 }
+
+/* ====== try ======= */
+/* .try {
+  width: 142px;
+  height: 99px;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  border-radius: 50% 50% 100% 0% / 100% 100% 0% 0%;
+  overflow: hidden;
+} */
